@@ -27,6 +27,11 @@
 | https://github.com/knative/client/pull/1118[#1118]
 |===
 
+| 🎁
+| Add machine readable output (-o flag) to kn broker describe
+| https://github.com/knative/client/pull/1124[#1124]
+|===
+
 ### v0.19.0 (2020-11-11)
 [cols="1,10,3", options="header", width="100%"]
 |===
